sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:4: error: identifier expected but 'while' found.
  while(ecart>0) {
  ^