sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var ecart=getNombreValeurs()/2.
  while(ecart>0) {
    insertionSort(ecart)
    ecart = (ecart.toDouble / 2).toInt
  }
}

def insertionSort(ecart: Int) {
  var k = 0
  var v = 0
  for (i<- 1 to getNombreValeurs() -1) {
    k=i
    v=getValeur(i)
    while((k-ecart+1 > 0) && getValue(k-ecart)>v) {
      copie(k-ecart,k)
      k=k-ecart
    }
    setValeur(k,v)
  }
}